Set up basic layout

--- a/index.html
+++ b/index.html
@@ -15,8 +15,56 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
-    
+<body class="bg-dark">
+    <div class="container bg-success p-4">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center">The Riddler's Batman Trivia</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p class="text-center">
+                    Riddle Me This, Riddle Me That.
+                </p>
+                <p class="text-center">
+                    Who Knows Trivia About the Big Black Bat?
+                </p>
+            </div>
+        </div>
+        <div class="gameBox">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <img src="assets/images/riddlerHead.png" class="img-fluid" alt="The Riddler">
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-12 text-center">
+                    <button type="button" class="btn btn-outline-dark btn-lg">Click to Start</button>
+                </div>
+            </div>
+            <div class="row scoreBox mt-5 p-3 bg-dark">
+                <div class="col-md-6 text-center">
+                    <img src="assets/images/batmanLogo.png" class="img-fluid" alt="Batman Logo">
+                </div>
+                <div class="col-md-6 text-center">
+                    <div class="card bg-warning">
+                        <div class="card-body">
+                            <h2 class="card-title">Total Score</h2>
+                            <p class="card-text">Correct:
+                                <span>0</span>
+                            </p>
+                            <p class="card-text">Incorrect
+                                <span>0</span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
 
 
 
