--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="bg-dark">
+<body>
     <div class="container bg-success p-4">
         <div class="row">
             <div class="col-md-12">
@@ -40,30 +40,31 @@
             </div>
             <div class="row mt-5">
                 <div class="col-md-12 text-center">
-                    <button type="button" class="btn btn-outline-dark btn-lg">Click to Start</button>
+                    <button type="button" class="btn btn-outline-dark btn-lg" id="startButton">Click to Start</button>
                 </div>
-            </div>
-            <div class="row scoreBox mt-5 p-3 bg-dark">
-                <div class="col-md-6 text-center">
-                    <img src="assets/images/batmanLogo.png" class="img-fluid" alt="Batman Logo">
-                </div>
-                <div class="col-md-6 text-center">
-                    <div class="card bg-warning">
-                        <div class="card-body">
-                            <h2 class="card-title">Total Score</h2>
-                            <p class="card-text">Correct:
-                                <span>0</span>
-                            </p>
-                            <p class="card-text">Incorrect
-                                <span>0</span>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
-
+        <div class="row mt-5 p-3 bg-secondary border border-dark rounded scoreBox">
+            <div class="col-md-6 text-center">
+                <img src="assets/images/batmanLogo.png" class="img-fluid" alt="Batman Logo">
+            </div>
+            <div class="col-md-6 text-center">
+                <div class="card bg-warning">
+                    <div class="card-body">
+                        <h2 class="card-title">Total Score</h2>
+                        <p class="card-text">Correct:
+                            <span>0</span>
+                        </p>
+                        <p class="card-text">Incorrect
+                            <span>0</span>
+                        </p>
+                        <p class="card-text">Not Answered
+                            <span>0</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 
