--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="row mt-5 p-3 bg-secondary border border-dark rounded scoreBox">
             <div class="col-md-6 text-center">
-                <img src="assets/images/batmanLogo.png" class="img-fluid" alt="Batman Logo">
+                <img src="assets/images/batmanLogo.png" class="img-fluid mb-3" alt="Batman Logo">
             </div>
             <div class="col-md-6 text-center">
                 <div class="card bg-warning">
