--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                     <div class="card-body">
                         <h2 class="card-title">Total Score</h2>
                         <p class="card-text">Correct:
-                            <span>0</span>
+                            <span id="correctCounter">0</span>
                         </p>
                         <p class="card-text">Incorrect
-                            <span>0</span>
+                            <span id="incorrectCounter">0</span>
                         </p>
                         <p class="card-text">Not Answered
-                            <span>0</span>
+                            <span id="notAnsweredCounter">0</span>
                         </p>
                     </div>
                 </div>
