--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Link to Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <!-- Link to Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Orbitron|Slackey" rel="stylesheet">
     <!-- Link to My Custom Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -19,20 +21,20 @@
     <div class="container bg-success p-4">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center">The Riddler's Batman Trivia</h1>
+                <h1 class="text-center heading">The Riddler's Batman Trivia</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
-                <p class="text-center">
+                <p class="text-center subHeading">
                     Riddle Me This, Riddle Me That.
                 </p>
-                <p class="text-center">
+                <p class="text-center subHeading">
                     Who Knows Trivia About the Big Black Bat?
                 </p>
             </div>
         </div>
-        <div class="gameBox">
+        <div class="gameBox p-4 rounded">
             <div class="row">
                 <div class="col-md-12 text-center">
                     <img src="assets/images/riddlerHead.png" class="img-fluid" alt="The Riddler">
@@ -40,18 +42,18 @@
             </div>
             <div class="row mt-5">
                 <div class="col-md-12 text-center">
-                    <button type="button" class="btn btn-outline-dark btn-lg" id="startButton">Click to Start</button>
+                    <button type="button" class="btn btn-outline-light btn-lg startButton">Click to Start</button>
                 </div>
             </div>
         </div>
-        <div class="row mt-5 p-3 bg-secondary border border-dark rounded scoreBox">
+        <div class="row mt-3 p-3 bg-secondary border border-dark rounded scoreBox">
             <div class="col-md-6 text-center">
                 <img src="assets/images/batmanLogo.png" class="img-fluid mb-3" alt="Batman Logo">
             </div>
             <div class="col-md-6 text-center">
-                <div class="card bg-warning">
+                <div class="card border border-dark scoreCard">
                     <div class="card-body">
-                        <h2 class="card-title">Total Score</h2>
+                        <h2 class="card-title font-weight-bold">Total Score</h2>
                         <p class="card-text">Correct:
                             <span id="correctCounter">0</span>
                         </p>
