--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="container bg-success p-4">
+    <div class="container bg-success px-5 py-4">
         <div class="row">
             <div class="col-md-12">
                 <h1 class="text-center heading">The Riddler's Batman Trivia</h1>
